--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -24,24 +24,26 @@ jobs:
         with:
           node-version: '22'
 
-      - name: 3. التنظيف وعزل الكود
+      - name: 3. التنظيف الشامل وعزل الكود
         run: |
-          rm -rf android node_modules
-          npm install --legacy-peer-deps
-          mkdir -p dist_web
-          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
-          npm run build --if-present
+          rm -rf android node_modules [cite: 3]
+          npm install --legacy-peer-deps [cite: 3]
+          mkdir -p dist_web [cite: 3]
+          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web [cite: 3, 4]
+          npm run build --if-present [cite: 4]
 
-      - name: 4. إضافة منصة أندرويد وتحديثها
+      - name: 4. إعادة بناء منصة أندرويد
         run: |
-          npx cap config set webDir dist_web
-          npx cap add android
-          npx cap sync android
+          npx cap config set webDir dist_web [cite: 5]
+          npx cap add android [cite: 5]
+          npx cap sync android [cite: 5]
 
-      - name: 5. ضبط أمن الشبكة وتفعيل معالجة الصور والصوت الشاملة
+      - name: 5. تصحيح مسارات معالجة الصور والصوت
         run: |
-          # 1. إنشاء ملف أمن الشبكة برمجياً
-          mkdir -p android/app/src/main/res/xml
+          # التأكد من وجود المجلدات [cite: 6]
+          mkdir -p android/app/src/main/res/xml [cite: 6]
+          
+          # إنشاء إعدادات أمن الشبكة [cite: 6]
           echo '<?xml version="1.0" encoding="utf-8"?>
           <network-security-config>
               <domain-config cleartextTrafficPermitted="true">
@@ -53,76 +55,59 @@ jobs:
                       <certificates src="user" />
                   </trust-anchors>
               </base-config>
-          </network-security-config>' > android/app/src/main/res/xml/network_security_config.xml
+          </network-security-config>' > android/app/src/main/res/xml/network_security_config.xml [cite: 8]
 
-          # 2. إنشاء FileProvider لحل مشكلة "تعذر معالجة الصورة"
+          # إنشاء مسارات الملفات (لحل مشكلة معالجة الصور)
           echo '<?xml version="1.0" encoding="utf-8"?>
           <paths>
               <external-path name="my_images" path="." />
               <cache-path name="my_cache" path="." />
+              <external-files-path name="external_files" path="." />
           </paths>' > android/app/src/main/res/xml/file_paths.xml
 
-          # 3. إضافة التصاريح الشاملة للـ Manifest
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml
+          # إضافة التصاريح للمانيفست 
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml [cite: 8]
           sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' android/app/src/main/AndroidManifest.xml
           sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="32" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
           sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />' android/app/src/main/AndroidManifest.xml
 
-          # 4. تحديث وسم application وإضافة مزود الملفات (Provider)
-          sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml
+          # تحديث وسم application وإضافة Provider الصور 
+          [cite_start]sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml [cite: 8]
           sed -i '/<\/application>/i \    <provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true"> <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" /> </provider>' android/app/src/main/AndroidManifest.xml
 
-      - name: 6. ضبط الأيقونات وفيديو شاشة البداية
+      - name: 6. الأيقونات والوسائط
         run: |
-          npm install @capacitor/assets --save-dev
-          mkdir -p android/app/src/main/res/raw
-          if [ -f "resources/splash_video.mp4" ];
-          then
-            cp resources/splash_video.mp4 android/app/src/main/res/raw/
-            echo "✅ تم نقل الفيديو بنجاح"
-          else
-            echo "⚠️ تحذير: لم يتم العثور على resources/splash_video.mp4"
-          fi
-          npx capacitor-assets generate --android
+          npm install @capacitor/assets --save-dev [cite: 10]
+          npx capacitor-assets generate --android [cite: 11]
 
-      - name: 7. بناء ملفات الـ APK و AAB
+      - name: 7. بناء الملفات (APK & AAB)
         run: |
-          cd android
-          chmod +x gradlew
-          ./gradlew assembleRelease
-          ./gradlew bundleRelease
+          cd android 
+          chmod +x gradlew 
+          ./gradlew clean 
+          ./gradlew assembleRelease 
+          ./gradlew bundleRelease 
 
-      - name: 8. إنشاء ملف التوقيع وتوقيع الملفات
+      - name: 8. التوقيع النهائي
         run: |
           keytool -genkey -v -keystore release_key.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
             -storepass "roqa_password_2026" -keypass "roqa_password_2026" \
-            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
+            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG" [cite: 13]
           
-          APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
-          AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1)
+          [cite_start]APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1) [cite: 13]
+          [cite_start]AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1) [cite: 13]
 
-          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks \
-            --ks-key-alias "roqa_alias" \
-            --ks-pass pass:"roqa_password_2026" \
-            --key-pass pass:"roqa_password_2026" \
-            --out Roqa-Final-Signed.apk \
-            "$APK_FILE"
+          [cite_start]/usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks --ks-key-alias "roqa_alias" --ks-pass pass:"roqa_password_2026" --key-pass pass:"roqa_password_2026" --out Roqa-Final-Signed.apk "$APK_FILE" [cite: 14]
+          [cite_start]jarsigner -keystore release_key.jks -storepass "roqa_password_2026" -keypass "roqa_password_2026" "$AAB_FILE" roqa_alias [cite: 14, 15]
+          [cite_start]cp "$AAB_FILE" Roqa-Final-Signed.aab [cite: 15]
 
-          jarsigner -keystore release_key.jks \
-            -storepass "roqa_password_2026" \
-            -keypass "roqa_password_2026" \
-            "$AAB_FILE" roqa_alias
-
-          cp "$AAB_FILE" Roqa-Final-Signed.aab
-
-      - name: 9. رفع الملفات الموقعة وملف التوقيع
+      - name: 9. رفع النتائج
         uses: actions/upload-artifact@v4
         with:
-          name: Roqa-Full-Package-v${{ github.run_number }}
+          [cite_start]name: Roqa-Full-Package-v${{ github.run_number }} [cite: 15]
           path: |
-            Roqa-Final-Signed.apk
-            Roqa-Final-Signed.aab
-            release_key.jks
+            Roqa-Final-Signed.apk [cite: 16]
+            Roqa-Final-Signed.aab [cite: 16]
+            release_key.jks [cite: 16]
